calorie-api-infrastructure/cdk.out/CalorieApiInfrastructureStack.template.json
{
 "Resources": {
  "CalorieAppVpc015C7D8B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/Resource"
   }
  },
  "CalorieAppVpcpublicSubnet1Subnet75B7B004": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1/Subnet"
   }
  },
  "CalorieAppVpcpublicSubnet1RouteTable49302F5D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1/RouteTable"
   }
  },
  "CalorieAppVpcpublicSubnet1RouteTableAssociationEE18DAC2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CalorieAppVpcpublicSubnet1RouteTable49302F5D"
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcpublicSubnet1Subnet75B7B004"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "CalorieAppVpcpublicSubnet1DefaultRoute4AD8FD3D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CalorieAppVpcIGWD095B839"
    },
    "RouteTableId": {
     "Ref": "CalorieAppVpcpublicSubnet1RouteTable49302F5D"
    }
   },
   "DependsOn": [
    "CalorieAppVpcVPCGWC3984F3A"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1/DefaultRoute"
   }
  },
  "CalorieAppVpcpublicSubnet1EIPC911AB69": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1/EIP"
   }
  },
  "CalorieAppVpcpublicSubnet1NATGateway490E7486": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "CalorieAppVpcpublicSubnet1EIPC911AB69",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcpublicSubnet1Subnet75B7B004"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "CalorieAppVpcpublicSubnet1DefaultRoute4AD8FD3D",
    "CalorieAppVpcpublicSubnet1RouteTableAssociationEE18DAC2"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet1/NATGateway"
   }
  },
  "CalorieAppVpcpublicSubnet2SubnetC939A885": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet2/Subnet"
   }
  },
  "CalorieAppVpcpublicSubnet2RouteTable5C899FC3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet2/RouteTable"
   }
  },
  "CalorieAppVpcpublicSubnet2RouteTableAssociation04FBAC42": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CalorieAppVpcpublicSubnet2RouteTable5C899FC3"
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcpublicSubnet2SubnetC939A885"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "CalorieAppVpcpublicSubnet2DefaultRouteFD14850A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CalorieAppVpcIGWD095B839"
    },
    "RouteTableId": {
     "Ref": "CalorieAppVpcpublicSubnet2RouteTable5C899FC3"
    }
   },
   "DependsOn": [
    "CalorieAppVpcVPCGWC3984F3A"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet2/DefaultRoute"
   }
  },
  "CalorieAppVpcpublicSubnet3SubnetD8905E29": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet3/Subnet"
   }
  },
  "CalorieAppVpcpublicSubnet3RouteTable22B7FCFE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet3/RouteTable"
   }
  },
  "CalorieAppVpcpublicSubnet3RouteTableAssociationBDB7F398": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CalorieAppVpcpublicSubnet3RouteTable22B7FCFE"
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcpublicSubnet3SubnetD8905E29"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet3/RouteTableAssociation"
   }
  },
  "CalorieAppVpcpublicSubnet3DefaultRoute6FB653AF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CalorieAppVpcIGWD095B839"
    },
    "RouteTableId": {
     "Ref": "CalorieAppVpcpublicSubnet3RouteTable22B7FCFE"
    }
   },
   "DependsOn": [
    "CalorieAppVpcVPCGWC3984F3A"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/publicSubnet3/DefaultRoute"
   }
  },
  "CalorieAppVpcprivateSubnet1Subnet003FD2BF": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet1/Subnet"
   }
  },
  "CalorieAppVpcprivateSubnet1RouteTableA4C4C21C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet1/RouteTable"
   }
  },
  "CalorieAppVpcprivateSubnet1RouteTableAssociation9084A00D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CalorieAppVpcprivateSubnet1RouteTableA4C4C21C"
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcprivateSubnet1Subnet003FD2BF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "CalorieAppVpcprivateSubnet1DefaultRouteE607E78F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CalorieAppVpcpublicSubnet1NATGateway490E7486"
    },
    "RouteTableId": {
     "Ref": "CalorieAppVpcprivateSubnet1RouteTableA4C4C21C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet1/DefaultRoute"
   }
  },
  "CalorieAppVpcprivateSubnet2SubnetAA2C170C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet2/Subnet"
   }
  },
  "CalorieAppVpcprivateSubnet2RouteTableEA09CA9E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet2/RouteTable"
   }
  },
  "CalorieAppVpcprivateSubnet2RouteTableAssociation5BE4FE77": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CalorieAppVpcprivateSubnet2RouteTableEA09CA9E"
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcprivateSubnet2SubnetAA2C170C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "CalorieAppVpcprivateSubnet2DefaultRoute6A42DFF4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CalorieAppVpcpublicSubnet1NATGateway490E7486"
    },
    "RouteTableId": {
     "Ref": "CalorieAppVpcprivateSubnet2RouteTableEA09CA9E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet2/DefaultRoute"
   }
  },
  "CalorieAppVpcprivateSubnet3Subnet8804B7AC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2c",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet3/Subnet"
   }
  },
  "CalorieAppVpcprivateSubnet3RouteTableC2CA7FAD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet3/RouteTable"
   }
  },
  "CalorieAppVpcprivateSubnet3RouteTableAssociationEA534E82": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CalorieAppVpcprivateSubnet3RouteTableC2CA7FAD"
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcprivateSubnet3Subnet8804B7AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet3/RouteTableAssociation"
   }
  },
  "CalorieAppVpcprivateSubnet3DefaultRoute6BF98CE4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CalorieAppVpcpublicSubnet1NATGateway490E7486"
    },
    "RouteTableId": {
     "Ref": "CalorieAppVpcprivateSubnet3RouteTableC2CA7FAD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/privateSubnet3/DefaultRoute"
   }
  },
  "CalorieAppVpcisolatedSubnet1Subnet8A39A3D4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.6.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet1/Subnet"
   }
  },
  "CalorieAppVpcisolatedSubnet1RouteTableED91E35A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet1/RouteTable"
   }
  },
  "CalorieAppVpcisolatedSubnet1RouteTableAssociationBB7FD053": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CalorieAppVpcisolatedSubnet1RouteTableED91E35A"
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcisolatedSubnet1Subnet8A39A3D4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet1/RouteTableAssociation"
   }
  },
  "CalorieAppVpcisolatedSubnet2SubnetA36AB39F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.7.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet2/Subnet"
   }
  },
  "CalorieAppVpcisolatedSubnet2RouteTable02B862BD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet2/RouteTable"
   }
  },
  "CalorieAppVpcisolatedSubnet2RouteTableAssociation63DF6AC9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CalorieAppVpcisolatedSubnet2RouteTable02B862BD"
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcisolatedSubnet2SubnetA36AB39F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet2/RouteTableAssociation"
   }
  },
  "CalorieAppVpcisolatedSubnet3Subnet1FA0D76E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2c",
    "CidrBlock": "10.0.8.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet3/Subnet"
   }
  },
  "CalorieAppVpcisolatedSubnet3RouteTable1425916A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet3/RouteTable"
   }
  },
  "CalorieAppVpcisolatedSubnet3RouteTableAssociation65A176F0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CalorieAppVpcisolatedSubnet3RouteTable1425916A"
    },
    "SubnetId": {
     "Ref": "CalorieAppVpcisolatedSubnet3Subnet1FA0D76E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/isolatedSubnet3/RouteTableAssociation"
   }
  },
  "CalorieAppVpcIGWD095B839": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CalorieApiInfrastructureStack/CalorieAppVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/IGW"
   }
  },
  "CalorieAppVpcVPCGWC3984F3A": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "CalorieAppVpcIGWD095B839"
    },
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/VPCGW"
   }
  },
  "CalorieAppVpcRestrictDefaultSecurityGroupCustomResource9CB4FA9B": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "CalorieAppVpc015C7D8B",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "850960379692"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-2:850960379692:security-group/",
             {
              "Fn::GetAtt": [
               "CalorieAppVpc015C7D8B",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-850960379692-us-east-2",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "DatabaseSecurityGroup7319C0F6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for RDS PostgreSQL database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/DatabaseSecurityGroup/Resource"
   }
  },
  "DatabaseSecurityGroupfromCalorieApiInfrastructureStackLambdaSecurityGroupD732B9C95432ED118FA3": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow Lambda to connect to PostgreSQL",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DatabaseSecurityGroup7319C0F6",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LambdaSecurityGroup0BD9FC99",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/DatabaseSecurityGroup/from CalorieApiInfrastructureStackLambdaSecurityGroupD732B9C9:5432"
   }
  },
  "LambdaSecurityGroup0BD9FC99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Lambda functions",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "CalorieAppVpc015C7D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/LambdaSecurityGroup/Resource"
   }
  },
  "DatabaseCredentials8547B3E7": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": "Credentials for the calorie tracking database",
    "GenerateSecretString": {
     "ExcludeCharacters": "\"@/\\",
     "GenerateStringKey": "password",
     "SecretStringTemplate": "{\"username\":\"postgres\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/DatabaseCredentials/Resource"
   }
  },
  "DatabaseCredentialsAttachment7BAB329F": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "DatabaseCredentials8547B3E7"
    },
    "TargetId": {
     "Ref": "CalorieDatabase40E7B4B2"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/DatabaseCredentials/Attachment/Resource"
   }
  },
  "CalorieDatabaseSubnetGroup37785E39": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for CalorieDatabase database",
    "SubnetIds": [
     {
      "Ref": "CalorieAppVpcisolatedSubnet1Subnet8A39A3D4"
     },
     {
      "Ref": "CalorieAppVpcisolatedSubnet2SubnetA36AB39F"
     },
     {
      "Ref": "CalorieAppVpcisolatedSubnet3Subnet1FA0D76E"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieDatabase/SubnetGroup/Default"
   }
  },
  "CalorieDatabase40E7B4B2": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "100",
    "BackupRetentionPeriod": 7,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "caloriedb",
    "DBSubnetGroupName": {
     "Ref": "CalorieDatabaseSubnetGroup37785E39"
    },
    "DeletionProtection": false,
    "Engine": "postgres",
    "EngineVersion": "15.4",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DatabaseCredentials8547B3E7"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DatabaseCredentials8547B3E7"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "DatabaseSecurityGroup7319C0F6",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieDatabase/Resource"
   }
  },
  "CalorieAppUserPool9E7FF995": {
   "Type": "AWS::Cognito::UserPool",
   "Properties": {
    "AccountRecoverySetting": {
     "RecoveryMechanisms": [
      {
       "Name": "verified_email",
       "Priority": 1
      }
     ]
    },
    "AdminCreateUserConfig": {
     "AllowAdminCreateUserOnly": false
    },
    "AutoVerifiedAttributes": [
     "email"
    ],
    "EmailVerificationMessage": "The verification code to your new account is {####}",
    "EmailVerificationSubject": "Verify your new account",
    "Policies": {
     "PasswordPolicy": {
      "MinimumLength": 8,
      "RequireLowercase": true,
      "RequireNumbers": true,
      "RequireSymbols": false,
      "RequireUppercase": true
     }
    },
    "Schema": [
     {
      "Mutable": true,
      "Name": "email",
      "Required": true
     }
    ],
    "SmsVerificationMessage": "The verification code to your new account is {####}",
    "UserPoolName": "calorie-app-users",
    "UsernameAttributes": [
     "email"
    ],
    "VerificationMessageTemplate": {
     "DefaultEmailOption": "CONFIRM_WITH_CODE",
     "EmailMessage": "The verification code to your new account is {####}",
     "EmailSubject": "Verify your new account",
     "SmsMessage": "The verification code to your new account is {####}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppUserPool/Resource"
   }
  },
  "CalorieAppUserPoolClientDA700BFE": {
   "Type": "AWS::Cognito::UserPoolClient",
   "Properties": {
    "AllowedOAuthFlows": [
     "implicit",
     "code"
    ],
    "AllowedOAuthFlowsUserPoolClient": true,
    "AllowedOAuthScopes": [
     "profile",
     "phone",
     "email",
     "openid",
     "aws.cognito.signin.user.admin"
    ],
    "CallbackURLs": [
     "https://example.com"
    ],
    "ClientName": "calorie-app-client",
    "ExplicitAuthFlows": [
     "ALLOW_USER_PASSWORD_AUTH",
     "ALLOW_USER_SRP_AUTH",
     "ALLOW_REFRESH_TOKEN_AUTH"
    ],
    "GenerateSecret": false,
    "SupportedIdentityProviders": [
     "COGNITO"
    ],
    "UserPoolId": {
     "Ref": "CalorieAppUserPool9E7FF995"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieAppUserPoolClient/Resource"
   }
  },
  "CalorieApiFunctionServiceRole8AAD1C88": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "CalorieAppVpcprivateSubnet1DefaultRouteE607E78F",
    "CalorieAppVpcprivateSubnet1RouteTableAssociation9084A00D",
    "CalorieAppVpcprivateSubnet2DefaultRoute6A42DFF4",
    "CalorieAppVpcprivateSubnet2RouteTableAssociation5BE4FE77",
    "CalorieAppVpcprivateSubnet3DefaultRoute6BF98CE4",
    "CalorieAppVpcprivateSubnet3RouteTableAssociationEA534E82"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApiFunction/ServiceRole/Resource"
   }
  },
  "CalorieApiFunctionServiceRoleDefaultPolicy0B837CAB": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "secretsmanager:DescribeSecret",
        "secretsmanager:GetSecretValue"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "DatabaseCredentials8547B3E7"
       }
      },
      {
       "Action": [
        "rds:Connect",
        "rds:DescribeDBInstances"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:aws:rds:us-east-2:850960379692:db:",
          {
           "Ref": "CalorieDatabase40E7B4B2"
          }
         ]
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "CalorieApiFunctionServiceRoleDefaultPolicy0B837CAB",
    "Roles": [
     {
      "Ref": "CalorieApiFunctionServiceRole8AAD1C88"
     }
    ]
   },
   "DependsOn": [
    "CalorieAppVpcprivateSubnet1DefaultRouteE607E78F",
    "CalorieAppVpcprivateSubnet1RouteTableAssociation9084A00D",
    "CalorieAppVpcprivateSubnet2DefaultRoute6A42DFF4",
    "CalorieAppVpcprivateSubnet2RouteTableAssociation5BE4FE77",
    "CalorieAppVpcprivateSubnet3DefaultRoute6BF98CE4",
    "CalorieAppVpcprivateSubnet3RouteTableAssociationEA534E82"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApiFunction/ServiceRole/DefaultPolicy/Resource"
   }
  },
  "CalorieApiFunction81E7E8DE": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "ZipFile": "\n        const { Client } = require('pg');\n        \n        exports.handler = async (event) => {\n          console.log('Event:', JSON.stringify(event, null, 2));\n          \n          const headers = {\n            'Access-Control-Allow-Origin': '*',\n            'Access-Control-Allow-Headers': 'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token',\n            'Access-Control-Allow-Methods': 'GET,POST,PUT,DELETE,OPTIONS',\n            'Content-Type': 'appl [...]
    },
    "Environment": {
     "Variables": {
      "DB_SECRET_ARN": {
       "Ref": "DatabaseCredentials8547B3E7"
      },
      "DB_ENDPOINT": {
       "Fn::GetAtt": [
        "CalorieDatabase40E7B4B2",
        "Endpoint.Address"
       ]
      },
      "DB_PORT": {
       "Fn::GetAtt": [
        "CalorieDatabase40E7B4B2",
        "Endpoint.Port"
       ]
      },
      "DB_NAME": "caloriedb"
     }
    },
    "Handler": "index.handler",
    "Role": {
     "Fn::GetAtt": [
      "CalorieApiFunctionServiceRole8AAD1C88",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Timeout": 30,
    "VpcConfig": {
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "LambdaSecurityGroup0BD9FC99",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "CalorieAppVpcprivateSubnet1Subnet003FD2BF"
      },
      {
       "Ref": "CalorieAppVpcprivateSubnet2SubnetAA2C170C"
      },
      {
       "Ref": "CalorieAppVpcprivateSubnet3Subnet8804B7AC"
      }
     ]
    }
   },
   "DependsOn": [
    "CalorieApiFunctionServiceRoleDefaultPolicy0B837CAB",
    "CalorieApiFunctionServiceRole8AAD1C88",
    "CalorieAppVpcprivateSubnet1DefaultRouteE607E78F",
    "CalorieAppVpcprivateSubnet1RouteTableAssociation9084A00D",
    "CalorieAppVpcprivateSubnet2DefaultRoute6A42DFF4",
    "CalorieAppVpcprivateSubnet2RouteTableAssociation5BE4FE77",
    "CalorieAppVpcprivateSubnet3DefaultRoute6BF98CE4",
    "CalorieAppVpcprivateSubnet3RouteTableAssociationEA534E82"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApiFunction/Resource"
   }
  },
  "CalorieApi7627DA82": {
   "Type": "AWS::ApiGateway::RestApi",
   "Properties": {
    "Description": "API for calorie tracking application",
    "Name": "Calorie Tracking API"
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Resource"
   }
  },
  "CalorieApiCloudWatchRole9B6C8484": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "apigateway.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs"
       ]
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/CloudWatchRole/Resource"
   }
  },
  "CalorieApiAccountB11A31EB": {
   "Type": "AWS::ApiGateway::Account",
   "Properties": {
    "CloudWatchRoleArn": {
     "Fn::GetAtt": [
      "CalorieApiCloudWatchRole9B6C8484",
      "Arn"
     ]
    }
   },
   "DependsOn": [
    "CalorieApi7627DA82"
   ],
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Account"
   }
  },
  "CalorieApiDeployment7EF5901Cf3af3c8ca5543a1019c38a58950fe604": {
   "Type": "AWS::ApiGateway::Deployment",
   "Properties": {
    "Description": "API for calorie tracking application",
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    }
   },
   "DependsOn": [
    "CalorieApifoodsproxyANY1414F696",
    "CalorieApifoodsproxyOPTIONS2CC5B1BE",
    "CalorieApifoodsproxy715F8E44",
    "CalorieApifoodsGET4B9E2951",
    "CalorieApifoodsOPTIONS74E5910D",
    "CalorieApifoodsPOST8D1AA56C",
    "CalorieApifoodsDBC8776E",
    "CalorieApiOPTIONS4D75FBBA"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Deployment/Resource"
   }
  },
  "CalorieApiDeploymentStageprodA74D9FB7": {
   "Type": "AWS::ApiGateway::Stage",
   "Properties": {
    "DeploymentId": {
     "Ref": "CalorieApiDeployment7EF5901Cf3af3c8ca5543a1019c38a58950fe604"
    },
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    },
    "StageName": "prod"
   },
   "DependsOn": [
    "CalorieApiAccountB11A31EB"
   ],
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/DeploymentStage.prod/Resource"
   }
  },
  "CalorieApiOPTIONS4D75FBBA": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "ApiKeyRequired": false,
    "AuthorizationType": "NONE",
    "HttpMethod": "OPTIONS",
    "Integration": {
     "IntegrationResponses": [
      {
       "ResponseParameters": {
        "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
        "method.response.header.Access-Control-Allow-Origin": "'*'",
        "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'"
       },
       "StatusCode": "204"
      }
     ],
     "RequestTemplates": {
      "application/json": "{ statusCode: 200 }"
     },
     "Type": "MOCK"
    },
    "MethodResponses": [
     {
      "ResponseParameters": {
       "method.response.header.Access-Control-Allow-Headers": true,
       "method.response.header.Access-Control-Allow-Origin": true,
       "method.response.header.Access-Control-Allow-Methods": true
      },
      "StatusCode": "204"
     }
    ],
    "ResourceId": {
     "Fn::GetAtt": [
      "CalorieApi7627DA82",
      "RootResourceId"
     ]
    },
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/OPTIONS/Resource"
   }
  },
  "CalorieApifoodsDBC8776E": {
   "Type": "AWS::ApiGateway::Resource",
   "Properties": {
    "ParentId": {
     "Fn::GetAtt": [
      "CalorieApi7627DA82",
      "RootResourceId"
     ]
    },
    "PathPart": "foods",
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/Resource"
   }
  },
  "CalorieApifoodsOPTIONS74E5910D": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "ApiKeyRequired": false,
    "AuthorizationType": "NONE",
    "HttpMethod": "OPTIONS",
    "Integration": {
     "IntegrationResponses": [
      {
       "ResponseParameters": {
        "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
        "method.response.header.Access-Control-Allow-Origin": "'*'",
        "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'"
       },
       "StatusCode": "204"
      }
     ],
     "RequestTemplates": {
      "application/json": "{ statusCode: 200 }"
     },
     "Type": "MOCK"
    },
    "MethodResponses": [
     {
      "ResponseParameters": {
       "method.response.header.Access-Control-Allow-Headers": true,
       "method.response.header.Access-Control-Allow-Origin": true,
       "method.response.header.Access-Control-Allow-Methods": true
      },
      "StatusCode": "204"
     }
    ],
    "ResourceId": {
     "Ref": "CalorieApifoodsDBC8776E"
    },
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/OPTIONS/Resource"
   }
  },
  "CalorieApifoodsGETApiPermissionCalorieApiInfrastructureStackCalorieApi09F47C67GETfoodsD7FABC26": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CalorieApiFunction81E7E8DE",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:850960379692:",
       {
        "Ref": "CalorieApi7627DA82"
       },
       "/",
       {
        "Ref": "CalorieApiDeploymentStageprodA74D9FB7"
       },
       "/GET/foods"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/GET/ApiPermission.CalorieApiInfrastructureStackCalorieApi09F47C67.GET..foods"
   }
  },
  "CalorieApifoodsGETApiPermissionTestCalorieApiInfrastructureStackCalorieApi09F47C67GETfoods2FA1338D": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CalorieApiFunction81E7E8DE",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:850960379692:",
       {
        "Ref": "CalorieApi7627DA82"
       },
       "/test-invoke-stage/GET/foods"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/GET/ApiPermission.Test.CalorieApiInfrastructureStackCalorieApi09F47C67.GET..foods"
   }
  },
  "CalorieApifoodsGET4B9E2951": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "AuthorizationType": "NONE",
    "HttpMethod": "GET",
    "Integration": {
     "IntegrationHttpMethod": "POST",
     "Type": "AWS_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "arn:aws:apigateway:us-east-2:lambda:path/2015-03-31/functions/",
        {
         "Fn::GetAtt": [
          "CalorieApiFunction81E7E8DE",
          "Arn"
         ]
        },
        "/invocations"
       ]
      ]
     }
    },
    "ResourceId": {
     "Ref": "CalorieApifoodsDBC8776E"
    },
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/GET/Resource"
   }
  },
  "CalorieApifoodsPOSTApiPermissionCalorieApiInfrastructureStackCalorieApi09F47C67POSTfoodsA8DCCF0E": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CalorieApiFunction81E7E8DE",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:850960379692:",
       {
        "Ref": "CalorieApi7627DA82"
       },
       "/",
       {
        "Ref": "CalorieApiDeploymentStageprodA74D9FB7"
       },
       "/POST/foods"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/POST/ApiPermission.CalorieApiInfrastructureStackCalorieApi09F47C67.POST..foods"
   }
  },
  "CalorieApifoodsPOSTApiPermissionTestCalorieApiInfrastructureStackCalorieApi09F47C67POSTfoods53E4533E": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CalorieApiFunction81E7E8DE",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:850960379692:",
       {
        "Ref": "CalorieApi7627DA82"
       },
       "/test-invoke-stage/POST/foods"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/POST/ApiPermission.Test.CalorieApiInfrastructureStackCalorieApi09F47C67.POST..foods"
   }
  },
  "CalorieApifoodsPOST8D1AA56C": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "AuthorizationType": "NONE",
    "HttpMethod": "POST",
    "Integration": {
     "IntegrationHttpMethod": "POST",
     "Type": "AWS_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "arn:aws:apigateway:us-east-2:lambda:path/2015-03-31/functions/",
        {
         "Fn::GetAtt": [
          "CalorieApiFunction81E7E8DE",
          "Arn"
         ]
        },
        "/invocations"
       ]
      ]
     }
    },
    "ResourceId": {
     "Ref": "CalorieApifoodsDBC8776E"
    },
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/POST/Resource"
   }
  },
  "CalorieApifoodsproxy715F8E44": {
   "Type": "AWS::ApiGateway::Resource",
   "Properties": {
    "ParentId": {
     "Ref": "CalorieApifoodsDBC8776E"
    },
    "PathPart": "{proxy+}",
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/{proxy+}/Resource"
   }
  },
  "CalorieApifoodsproxyOPTIONS2CC5B1BE": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "ApiKeyRequired": false,
    "AuthorizationType": "NONE",
    "HttpMethod": "OPTIONS",
    "Integration": {
     "IntegrationResponses": [
      {
       "ResponseParameters": {
        "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
        "method.response.header.Access-Control-Allow-Origin": "'*'",
        "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'"
       },
       "StatusCode": "204"
      }
     ],
     "RequestTemplates": {
      "application/json": "{ statusCode: 200 }"
     },
     "Type": "MOCK"
    },
    "MethodResponses": [
     {
      "ResponseParameters": {
       "method.response.header.Access-Control-Allow-Headers": true,
       "method.response.header.Access-Control-Allow-Origin": true,
       "method.response.header.Access-Control-Allow-Methods": true
      },
      "StatusCode": "204"
     }
    ],
    "ResourceId": {
     "Ref": "CalorieApifoodsproxy715F8E44"
    },
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/{proxy+}/OPTIONS/Resource"
   }
  },
  "CalorieApifoodsproxyANYApiPermissionCalorieApiInfrastructureStackCalorieApi09F47C67ANYfoodsproxy6B9FB928": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CalorieApiFunction81E7E8DE",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:850960379692:",
       {
        "Ref": "CalorieApi7627DA82"
       },
       "/",
       {
        "Ref": "CalorieApiDeploymentStageprodA74D9FB7"
       },
       "/*/foods/*"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/{proxy+}/ANY/ApiPermission.CalorieApiInfrastructureStackCalorieApi09F47C67.ANY..foods.{proxy+}"
   }
  },
  "CalorieApifoodsproxyANYApiPermissionTestCalorieApiInfrastructureStackCalorieApi09F47C67ANYfoodsproxy348B246F": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CalorieApiFunction81E7E8DE",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:850960379692:",
       {
        "Ref": "CalorieApi7627DA82"
       },
       "/test-invoke-stage/*/foods/*"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/{proxy+}/ANY/ApiPermission.Test.CalorieApiInfrastructureStackCalorieApi09F47C67.ANY..foods.{proxy+}"
   }
  },
  "CalorieApifoodsproxyANY1414F696": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "AuthorizationType": "NONE",
    "HttpMethod": "ANY",
    "Integration": {
     "IntegrationHttpMethod": "POST",
     "Type": "AWS_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "arn:aws:apigateway:us-east-2:lambda:path/2015-03-31/functions/",
        {
         "Fn::GetAtt": [
          "CalorieApiFunction81E7E8DE",
          "Arn"
         ]
        },
        "/invocations"
       ]
      ]
     }
    },
    "ResourceId": {
     "Ref": "CalorieApifoodsproxy715F8E44"
    },
    "RestApiId": {
     "Ref": "CalorieApi7627DA82"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CalorieApi/Default/foods/{proxy+}/ANY/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32STW/bMAyGf0vvirbmUKBHN1mLHNoadtfrQMusy9aWDJFKEAj+74O/s27YiQ9fvhYpylt9fXurv1/BiTem/NzUVOiYC5hPBSf+FdFsdXxtjdq92dd0p9JQ1GTyUFiUXlspc0HwBYoaV33VEmZnCIScXcw9/DikfXgCeQDBE5xV6ukIguvBByvoLS6GcZIpS0TAvDdoReVogic5P3gX2mGG/woHW3lk7hSj8SjcgIUKvY75kE/+nsbwAr5Cuei3GL5WOuVL1nEPAgUwHiwLWINqvNIyzf7uL2G2dsq4ypI4HX8y+tS5ujcsPMOupmmSP5VO1dAUJeh4H6yZl37JKfqGmMnZThE0OmZufLghpq4mM2x6pE5BS9W4cR0zZElaGtwrJsa4YEXtsa3ded7QRZYLVOO/MUCG7II3eAeM6hHl3ZV9caK5OjUZuOsu5MDimn+5vpRS7 [...]
   },
   "Metadata": {
    "aws:cdk:path": "CalorieApiInfrastructureStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "CalorieApiEndpointEB2559FA": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "CalorieApi7627DA82"
      },
      ".execute-api.us-east-2.",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "CalorieApiDeploymentStageprodA74D9FB7"
      },
      "/"
     ]
    ]
   }
  },
  "UserPoolId": {
   "Description": "Cognito User Pool ID",
   "Value": {
    "Ref": "CalorieAppUserPool9E7FF995"
   }
  },
  "UserPoolClientId": {
   "Description": "Cognito User Pool Client ID",
   "Value": {
    "Ref": "CalorieAppUserPoolClientDA700BFE"
   }
  },
  "ApiGatewayUrl": {
   "Description": "API Gateway URL",
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "CalorieApi7627DA82"
      },
      ".execute-api.us-east-2.",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "CalorieApiDeploymentStageprodA74D9FB7"
      },
      "/"
     ]
    ]
   }
  },
  "DatabaseEndpoint": {
   "Description": "RDS PostgreSQL endpoint",
   "Value": {
    "Fn::GetAtt": [
     "CalorieDatabase40E7B4B2",
     "Endpoint.Address"
    ]
   }
  },
  "DatabaseSecretArn": {
   "Description": "Database credentials secret ARN",
   "Value": {
    "Ref": "DatabaseCredentials8547B3E7"
   }
  },
  "VpcId": {
   "Description": "VPC ID",
   "Value": {
    "Ref": "CalorieAppVpc015C7D8B"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
